--- a/src/components/form/BlogForm.css
+++ b/src/components/form/BlogForm.css
@@ -13,4 +13,9 @@
       display: block;
       margin: 0.5rem auto;
     }
+
+    h1 {
+      text-align: center;
+      margin: 1rem auto;
+    }
   }
